Section 8 and 10 Course Project

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
                 <li><a href="#" (click) = "onSelect('shopping-list')">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li ><!-- class="dropdown" -->
+                <li class="dropdown" appDropdown> <!-- class="dropdown" -->
                      <a href="#"  role="button">Manage <span class="caret"></span></a> <!-- class="dropdown-toggle" -->
                     <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
