--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,15 +8,24 @@
         </div>
         <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
             <ul class="nav navbar-nav">
-                <li><a href="#" (click) = "onSelect('recipe')">Recipes</a></li>
-                <li><a href="#" (click) = "onSelect('shopping-list')">Shopping List</a></li>
+                <!-- Commented becoz now we are using Routes -->
+               <!--  <li><a href="#" (click) = "onSelect('recipe')">Recipes</a></li>
+                <li><a href="#" (click) = "onSelect('shopping-list')">Shopping List</a></li> -->
+                <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+                <li routerLinkActive="active"><a routerLink="/shoppinglist">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" appDropdown> <!-- class="dropdown" -->
-                     <a href="#"  role="button">Manage <span class="caret"></span></a> <!-- class="dropdown-toggle" -->
+                <!-- class="dropdown" -->
+                <li class="dropdown" appDropdown> 
+                    <!-- class="dropdown-toggle" -->
+                    <!-- <a href="#"  role="button">Manage <span class="caret"></span></a>  -->
+                    <a style="cursor: pointer;"  role="button">Manage <span class="caret"></span></a> 
+
                     <ul class="dropdown-menu">
-                        <li><a href="#">Save Data</a></li>
-                        <li><a href="#">Fetch Data</a></li>
+                        <!-- <li><a href="#">Save Data</a></li>
+                        <li><a href="#">Fetch Data</a></li> -->
+                        <li><a style="cursor: pointer;">Save Data</a></li>
+                        <li><a style="cursor: pointer;">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
