--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,8 +21,11 @@
             </button>
             <ul class="dropdown-menu">
                 <li><a (click)="toShoppingList()" style="cursor: pointer;" >Shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <!-- Removing href as it will reload the page -->
+                <!-- <li><a href="#">Edit Recipe</a></li>
+                <li><a href="#">Delete Recipe</a></li> -->
+                <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
+                <li><a style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
