--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">New Recipe</button>
+        <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
     </div>
 </div>
 <hr>
@@ -10,8 +10,9 @@
             [recipe] = 'recipeEl'
             (recipeSelected) = "onRecipeSelected(recipeEl)"
         ></app-recipe-item> -->
-        <app-recipe-item *ngFor = "let recipeEl of recipes"
+        <app-recipe-item *ngFor = "let recipeEl of recipes; let i = index"
             [recipe] = 'recipeEl'
+            [index] = 'i'
             
         ></app-recipe-item>
     </div>
