--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,7 +25,7 @@
                 <!-- <li><a href="#">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li> -->
                 <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
-                <li><a style="cursor: pointer;">Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" (click)="OnDeleteRecipe()">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
