--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,6 +12,7 @@
                <!--  <li><a href="#" (click) = "onSelect('recipe')">Recipes</a></li>
                 <li><a href="#" (click) = "onSelect('shopping-list')">Shopping List</a></li> -->
                 <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+                <li routerLinkActive="active"><a routerLink="/auth">Login</a></li>
                 <li routerLinkActive="active"><a routerLink="/shoppinglist">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -24,8 +25,8 @@
                     <ul class="dropdown-menu">
                         <!-- <li><a href="#">Save Data</a></li>
                         <li><a href="#">Fetch Data</a></li> -->
-                        <li><a style="cursor: pointer;">Save Data</a></li>
-                        <li><a style="cursor: pointer;">Fetch Data</a></li>
+                        <li><a style="cursor: pointer;" (click)="onSaveRecipe()">Save Data</a></li>
+                        <li><a style="cursor: pointer;" (click)="onFetchRecipe()">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
